Other local images fix
The URLs had an uppercase 'I' in Images, causing it to break on my local Linux machine

--- a/styles.css
+++ b/styles.css
@@ -353,14 +353,14 @@ a:hover:before {
 }
 
 #landing_splash header span {
-    background: url(Images/stroke-small.png) no-repeat 0px 73px;
+    background: url(images/stroke-small.png) no-repeat 0px 73px;
     background-size: contain;
     padding: 20px;
     margin: -20px;
 }
 
 #landing_splash span.splash-1 {
-    background-image: url(Images/splash1.jpg);
+    background-image: url(images/splash1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     position: absolute;
@@ -375,7 +375,7 @@ a:hover:before {
     left: 105px;
 }
 #landing_splash span.splash-2 {
-    background-image: url(Images/splash2.jpg);
+    background-image: url(images/splash2.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     position: absolute;
@@ -400,7 +400,7 @@ a:hover:before {
 }
 @media only screen and (max-width: 1400px) {
     #landing_splash header span {
-        background: url(Images/stroke-small.png) no-repeat 0px 64px;
+        background: url(images/stroke-small.png) no-repeat 0px 64px;
         background-size: contain;
     }
     #landing_splash header {
@@ -414,7 +414,7 @@ a:hover:before {
 }
 @media only screen and (max-width: 1200px) {
     #landing_splash header span {
-        background: url(Images/stroke-small.png) no-repeat 0px 51px;
+        background: url(images/stroke-small.png) no-repeat 0px 51px;
         background-size: contain;
     }
     #landing_splash header {
@@ -435,7 +435,7 @@ a:hover:before {
 }
 @media only screen and (max-width: 992px) {
     #landing_splash header span {
-        background: url(Images/stroke-small.png) no-repeat 0px 51px;
+        background: url(images/stroke-small.png) no-repeat 0px 51px;
         background-size: contain;
     }
     #landing_splash header {
